--- a/user dashboard/userdash.css
+++ b/user dashboard/userdash.css
@@ -214,7 +214,7 @@ table thead tr{
 input
 {
   height: 35px;
-  width: 400px;
+  width: 500px;
   border-radius: 4px;
   align-items: center;
   justify-content: center;
@@ -267,7 +267,23 @@ select
     width: 200px;
     justify-content: space-evenly;
   }
+  #graphics-card {
+    width: 500px;
 
-  @media (max-width : 600px) {
-     
   }
+ button{
+  height: 25px;
+  width: 100px;
+  background-color: deepskyblue;
+  color: rgb(255, 255, 255);
+ }
+ button:hover
+ {
+  height: 30px;
+  width: 120px;
+  background-color: rgb(0, 179, 255);
+  color: rgb(255, 255, 255);
+ }
+  /* @media (max-width : 600px) {
+     
+  } */
