--- a/admin_dashboard/admindash.css
+++ b/admin_dashboard/admindash.css
@@ -13,6 +13,14 @@
 body{
   background: rgb(226, 226, 226);
 }
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 nav{
   position: sticky;
   top: 0;
@@ -33,19 +41,33 @@ nav:hover{
   text-align: center;
   display: flex;
   margin: 10px 0 0 10px;
-  padding-bottom: 3rem;
+  padding-bottom: 1rem;
 }
 
 .logo img{
   width: 45px;
   height: 45px;
   border-radius: 50%;
+  margin-left: 11px;
 }
 .logo span{
   font-weight: bold;
   padding-left: 15px;
   font-size: 18px;
   text-transform: uppercase;
+}
+.greeting span {
+  font-weight: bold;
+}
+/* greeting message */
+#greeting-message {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+#username {
+  font-size: 20px;
+  font-weight: bold;
 }
 a{
   position: relative;
@@ -197,6 +219,9 @@ table thead tr{
   background: #4AD489;
   color: #fff;
   transition: 0.5rem;
+}
+.Products{
+  display: none;
 }
 .products{
   width: 100%;
